--- a/package.json
+++ b/package.json
@@ -4,14 +4,12 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack serve --open --config webpack.dev.js",
-    "build":"webpack --config webpack.prod.js"
-  
+    "build": "webpack --config webpack.prod.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
-
   "devDependencies": {
     "@babel/core": "^7.16.0",
     "@babel/preset-env": "^7.16.4",
@@ -21,7 +19,7 @@
     "file-loader": "^6.2.0",
     "html-loader": "^3.0.1",
     "html-webpack-plugin": "^5.5.0",
-    "sass": "^1.44.0",
+    "sass": "^1.45.1",
     "sass-loader": "^12.4.0",
     "style-loader": "^3.3.1",
     "ts-loader": "^9.2.6",
@@ -36,8 +34,7 @@
     "axios": "^0.24.0",
     "gsap": "^3.8.0",
     "lodash": "^4.17.21",
+    "mini-css-extract-plugin": "^2.4.5",
     "rxjs": "^7.4.0"
   }
-  
-  
 }
